--- a/conclusions.tex
+++ b/conclusions.tex
@@ -2,5 +2,16 @@
 
 \section{Conclusions}
 \label{sec:conclusions}
+%!TEX root = ./main.tex
+
+\section{Conclusions}
+\label{sec:conclusions}
+
+In this paper, we address the problem of inserting user preferences in the discovery of declarative process models as a two-class supervised task. In particular we extend the \nd binary miner for the \declare modeling language with preferences over \declare patterns and activities appearing in the model (plus a combination of the two). 
+The computation of preferred models, which take onto account the constraints posed by the user is performed using \asprin, a general framework for computing optimal answer sets of logic programs with preferences. The provided approach is described by means of motivating examples and an application to the real-life event logs DREYERS and CERV. 
+
+\todo{CG:Cosa mettiamo come findings e future works?} 
+
+
 
 \btext{@all, Chiara G}
