Latest version DOI for source code, to be changed for camera ready

--- a/deviant.bib
+++ b/deviant.bib
@@ -933,6 +933,8 @@ numpages = {12}
   pages     = {27–82}
 }
 
+% #TODO: pinpoint DOI
+%   Used "latest version" DOI, must be changed for camera ready!
 @misc{zenodo:experiments,
   author       = {Tessaris, Sergio and
                   Di Francescomarino, Chiara and
@@ -942,6 +944,6 @@ numpages = {12}
   year         = 2021,
   publisher    = {Zenodo},
   version      = {v1.0},
-  doi          = {10.5281/zenodo.5158528},
-  IGNORE_url          = {https://doi.org/10.5281/zenodo.5158528}
+  doi          = {10.5281/zenodo.5158527},
+  IGNORE_url          = {https://doi.org/10.5281/zenodo.5158527}
 }
